--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "build": "xcopy \"src\\assets\\3d\\hero\" \"public\\assets\" /E /I /Y && vite build && xcopy \"public\\assets\" \"dist\\assets\" /E /I /Y",
     "dev": "vite",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist",
-    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
